drivers: input: touchscreen: Add an interface to expose TP features to userspace
* Needs to implement and register ops from TP driver
 * Access them via /sys/touchpanel/*
 * Export capacitive keys status

Change-Id: I2baa61c6055ca6f6207ac0d6f627fe03048ccfb6

--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -122,3 +122,4 @@ obj-$(CONFIG_TOUCHSCREEN_FOCALTECH) += focaltech_spi/
 obj-$(CONFIG_TOUCHSCREEN_SYNAPTICS_DSX) += synaptics_dsx/
 obj-$(CONFIG_TOUCHSCREEN_FOCALTECH_3658U) += focaltech_3658u/
 obj-$(CONFIG_TOUCHSCREEN_NT36XXX)	+= nt36xxx/
+obj-$(CONFIG_TOUCHSCREEN_COMMON)	+= tp_common.o
