ARM64: configs: haydn: Enable CONFIG_BUILD_ARM64_DT_OVERLAY
Change-Id: I25959ef7eec025a5506cb6de863c09555a1dd4ce

--- a/arch/arm64/configs/haydn_defconfig
+++ b/arch/arm64/configs/haydn_defconfig
@@ -460,7 +460,7 @@ CONFIG_EFI=y
 
 # CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
-# CONFIG_BUILD_ARM64_DT_OVERLAY is not set
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
 
 #
 # Power management options
