drivers: input: fpc_tee: Import from gourami
Signed-off-by: Carlos Ayrton Lopez Arroyo <15030201@itcelaya.edu.mx>

--- a/drivers/input/fingerprint/Kconfig
+++ b/drivers/input/fingerprint/Kconfig
@@ -17,6 +17,8 @@ menuconfig INPUT_FINGERPRINT
 
 if INPUT_FINGERPRINT
 
+source "drivers/input/fingerprint/fpc_tee/Kconfig"
+
 source "drivers/input/fingerprint/goodix_fod/Kconfig"
 
 endif
