--- a/drivers/input/fingerprint/Makefile
+++ b/drivers/input/fingerprint/Makefile
@@ -4,5 +4,6 @@
 
 # Each configuration option enables a list of files.
 
+obj-y   += fpc_tee/
 #obj-$(CONFIG_FINGERPRINT_GOODIX_FOD)	+= goodix_fod/
 obj-y	+= goodix_fod/
