ARM64: configs: haydn: Enable qcom wlan drivers

--- a/arch/arm64/configs/haydn_defconfig
+++ b/arch/arm64/configs/haydn_defconfig
@@ -2124,6 +2124,7 @@ CONFIG_CNSS2=m
 CONFIG_CNSS2_QMI=y
 CONFIG_CNSS_ASYNC=y
 CONFIG_BUS_AUTO_SUSPEND=y
+CONFIG_QCA_CLD_WLAN=m
 # CONFIG_CNSS_QCA6290 is not set
 # CONFIG_CNSS_QCA6390 is not set
 # CONFIG_CNSS_EMULATION is not set
