--- a/arch/arm64/configs/haydn_defconfig
+++ b/arch/arm64/configs/haydn_defconfig
@@ -2372,7 +2372,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
 # CONFIG_INPUT_HISI_POWERKEY is not set
-# CONFIG_INPUT_AW8697_HAPTIC is not set
+CONFIG_INPUT_AW8697_HAPTIC=y
 # CONFIG_RMI4_CORE is not set
 
 #
