--- a/arch/arm64/configs/haydn_defconfig
+++ b/arch/arm64/configs/haydn_defconfig
@@ -474,6 +474,7 @@ CONFIG_EFI=y
 # CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
+# CONFIG_TLB_CONF_HANDLER is not set
 
 #
 # Power management options
@@ -2400,7 +2401,8 @@ CONFIG_INPUT_AW8697_HAPTIC=y
 # CONFIG_INPUT_AW862XX_HAPTIC is not set
 # CONFIG_RMI4_CORE is not set
 # CONFIG_FINGERPRINT_FP_VREG_CONTROL is not set
-# CONFIG_INPUT_FINGERPRINT is not set
+CONFIG_INPUT_FINGERPRINT=y
+CONFIG_FINGERPRINT_FPC_TEE=m
 
 #
 # stmvl53l5
@@ -3068,6 +3070,7 @@ CONFIG_QTI_SDPM_CLOCK_MONITOR=y
 CONFIG_QTI_CPU_HOTPLUG_COOLING_DEVICE=y
 CONFIG_QTI_DDR_COOLING_DEVICE=y
 # CONFIG_QTI_LMH_CPU_VDD_COOLING_DEVICE is not set
+# CONFIG_QTI_CX_IPEAK_COOLING_DEVICE is not set
 # end of Qualcomm thermal drivers
 
 CONFIG_QTI_THERMAL=y
@@ -3861,6 +3864,7 @@ CONFIG_QCOM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
 CONFIG_QCOM_KGSL_IOCOHERENCY_DEFAULT=y
 CONFIG_QCOM_KGSL_IDLE_TIMEOUT=80
 # CONFIG_QCOM_KGSL_CONTEXT_DEBUG is not set
+# CONFIG_QCOM_KGSL_QDSS_STM is not set
 
 #
 # Frame buffer Devices
@@ -4636,6 +4640,7 @@ CONFIG_LEDS_CLASS_FLASH=m
 # CONFIG_LEDS_AAT1290 is not set
 # CONFIG_LEDS_AN30259A is not set
 # CONFIG_LEDS_AS3645A is not set
+# CONFIG_LEDS_AW2016 is not set
 # CONFIG_LEDS_BCM6328 is not set
 # CONFIG_LEDS_BCM6358 is not set
 # CONFIG_LEDS_CR0014114 is not set
@@ -5061,8 +5066,6 @@ CONFIG_MSM_GENI_SE=y
 # CONFIG_MSM_11AD is not set
 # CONFIG_IOSS is not set
 # CONFIG_R8125 is not set
-# CONFIG_R8125_IPA_OFFLOAD is not set
-# CONFIG_IPA_ETH is not set
 # end of Qualcomm technologies inc. MSM specific device drivers
 
 CONFIG_CLKDEV_LOOKUP=y
@@ -5103,6 +5106,7 @@ CONFIG_QCOM_GDSC=y
 CONFIG_COMMON_CLK_QCOM=y
 # CONFIG_QCOM_A53PLL is not set
 CONFIG_QCOM_CLK_RPMH=y
+# CONFIG_QCS_CMN_BLK_PLL is not set
 # CONFIG_APQ_GCC_8084 is not set
 # CONFIG_APQ_MMCC_8084 is not set
 # CONFIG_IPQ_GCC_4019 is not set
@@ -5210,7 +5214,6 @@ CONFIG_FSL_ERRATUM_A008585=y
 CONFIG_HISILICON_ERRATUM_161010101=y
 CONFIG_ARM64_ERRATUM_858921=y
 # CONFIG_SUN50I_ERRATUM_UNKNOWN1 is not set
-# CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
 CONFIG_ARM_TIMER_SP804=y
 CONFIG_MTK_TIMER=y
 # end of Clock Source drivers
@@ -5419,7 +5422,9 @@ CONFIG_QCOM_FSA4480_I2C=y
 CONFIG_QCOM_SOC_SLEEP_STATS=y
 CONFIG_QCOM_CDSP_RM=y
 # CONFIG_CDSPRM_VTCM_DYNAMIC_DEBUG is not set
+# CONFIG_QCOM_SYSMON_SUBSYSTEM_STATS is not set
 CONFIG_QCOM_WDT_CORE=y
+# CONFIG_QCOM_CX_IPEAK is not set
 CONFIG_QCOM_SOC_WATCHDOG=y
 # CONFIG_QCOM_IRQ_STAT is not set
 # CONFIG_QCOM_INITIAL_LOGBUF is not set
@@ -5945,6 +5950,7 @@ CONFIG_HISILICON_IRQ_MBIGEN=y
 CONFIG_PARTITION_PERCPU=y
 CONFIG_QCOM_PDC=y
 # CONFIG_QCOM_MPM is not set
+CONFIG_QGKI_SHOW_S2IDLE_WAKE_IRQ=y
 # end of IRQ chip support
 
 # CONFIG_IPACK_BUS is not set
