haydn_defconfig: cleanup

--- a/arch/arm64/configs/haydn_defconfig
+++ b/arch/arm64/configs/haydn_defconfig
@@ -493,7 +493,7 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
@@ -2362,6 +2362,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_VIDEO is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_DEBUG is not set
 # CONFIG_TOUCHSCREEN_NT36XXX is not set
+CONFIG_TOUCHSCREEN_COMMON=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATMEL_CAPTOUCH is not set
@@ -2981,7 +2982,7 @@ CONFIG_HWMON=y
 # CONFIG_SENSORS_PCF8591 is not set
 # CONFIG_PMBUS is not set
 # CONFIG_SENSORS_PWM_FAN is not set
-CONFIG_SENSORS_QTI_AMOLED_ECM=y
+# CONFIG_SENSORS_QTI_AMOLED_ECM is not set
 # CONFIG_SENSORS_SHT15 is not set
 # CONFIG_SENSORS_SHT21 is not set
 # CONFIG_SENSORS_SHT3x is not set
@@ -3860,11 +3861,9 @@ CONFIG_QCOM_KGSL=y
 CONFIG_DEVFREQ_GOV_QCOM_ADRENO_TZ=y
 CONFIG_DEVFREQ_GOV_QCOM_GPUBW_MON=y
 CONFIG_QCOM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
-# CONFIG_QCOM_KGSL_CORESIGHT is not set
 CONFIG_QCOM_KGSL_IOCOHERENCY_DEFAULT=y
 CONFIG_QCOM_KGSL_IDLE_TIMEOUT=80
 # CONFIG_QCOM_KGSL_CONTEXT_DEBUG is not set
-# CONFIG_QCOM_KGSL_QDSS_STM is not set
 
 #
 # Frame buffer Devices
@@ -4713,19 +4712,7 @@ CONFIG_LEDS_TRIGGER_TIMER=m
 # CONFIG_ACCESSIBILITY is not set
 # CONFIG_INFINIBAND is not set
 CONFIG_EDAC_SUPPORT=y
-CONFIG_EDAC=y
-CONFIG_EDAC_QGKI=y
-CONFIG_EDAC_LEGACY_SYSFS=y
-# CONFIG_EDAC_DEBUG is not set
-# CONFIG_EDAC_THUNDERX is not set
-# CONFIG_EDAC_XGENE is not set
-# CONFIG_EDAC_PANIC_ON_CE is not set
-CONFIG_EDAC_KRYO_ARM64=y
-# CONFIG_EDAC_KRYO_ARM64_PANIC_ON_CE is not set
-CONFIG_EDAC_KRYO_ARM64_PANIC_ON_UE=y
-CONFIG_EDAC_QCOM=y
-# CONFIG_EDAC_QCOM_LLCC_PANIC_ON_CE is not set
-CONFIG_EDAC_QCOM_LLCC_PANIC_ON_UE=y
+# CONFIG_EDAC is not set
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_HCTOSYS=y
@@ -5372,18 +5359,14 @@ CONFIG_QCOM_SMEM=y
 # CONFIG_QCOM_SMD_RPM is not set
 # CONFIG_MSM_SPM is not set
 # CONFIG_MSM_L2_SPM is not set
-CONFIG_QCOM_MEMORY_DUMP_V2=y
+# CONFIG_QCOM_MEMORY_DUMP_V2 is not set
 CONFIG_QCOM_SMEM_STATE=y
 CONFIG_QCOM_SMP2P=y
 CONFIG_QCOM_SMSM=y
 CONFIG_QCOM_SOCINFO=y
 # CONFIG_QCOM_WCNSS_CTRL is not set
 CONFIG_QCOM_DCC_V2=y
-CONFIG_QCOM_MINIDUMP=y
-# CONFIG_QCOM_DYN_MINIDUMP_STACK is not set
-# CONFIG_QCOM_MINIDUMP_FTRACE is not set
-# CONFIG_QCOM_MINIDUMP_PANIC_DUMP is not set
-CONFIG_MINIDUMP_MAX_ENTRIES=200
+# CONFIG_QCOM_MINIDUMP is not set
 CONFIG_QCOM_MICRODUMP=y
 # CONFIG_QCOM_APR is not set
 CONFIG_QCOM_SECURE_BUFFER=y
@@ -6844,9 +6827,8 @@ CONFIG_EVENT_TRACING=y
 CONFIG_CONTEXT_SWITCH_TRACER=y
 CONFIG_IPC_LOGGING=y
 CONFIG_IPC_LOG_MINIDUMP_BUFFERS=0
-CONFIG_QCOM_RTB=y
-CONFIG_QCOM_RTB_QGKI=y
-CONFIG_QCOM_RTB_SEPARATE_CPUS=y
+# CONFIG_QCOM_RTB is not set
+# CONFIG_QCOM_RTB_QGKI is not set
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
@@ -6932,27 +6914,5 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_DEBUG_EFI is not set
 # CONFIG_ARM64_RELOC_TEST is not set
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_QGKI=y
-CONFIG_CORESIGHT_LINKS_AND_SINKS=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-# CONFIG_CORESIGHT_CATU is not set
-# CONFIG_CORESIGHT_SINK_TPIU is not set
-# CONFIG_CORESIGHT_SINK_ETBV10 is not set
-# CONFIG_CORESIGHT_SOURCE_ETM4X is not set
-CONFIG_CORESIGHT_STM=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-# CONFIG_CORESIGHT_TPDM_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_CSR=y
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_DUMMY=y
-CONFIG_CORESIGHT_REMOTE_ETM=y
-CONFIG_CORESIGHT_REMOTE_ETM_DEFAULT_ENABLE=0
-CONFIG_CORESIGHT_TGU=y
-# CONFIG_CORESIGHT_DBGUI is not set
-CONFIG_CORESIGHT_OST=y
-# CONFIG_CORESIGHT_FUSE is not set
+# CONFIG_CORESIGHT is not set
 # end of Kernel hacking
